MOBI-1086 headerText of dataViewColumn is no longer wrapping and causing header and column misalignment
git-svn-id: http://anonsvn.icesoft.org/repo/icemobile/trunk/icemobile@42133 8668f098-c06c-11db-ba21-f49e70c34f74

--- a/resources/themes/base/1_dataview.css
+++ b/resources/themes/base/1_dataview.css
@@ -103,14 +103,16 @@
     border-collapse: collapse;
 }
 .mobi-dv table th{
-    white-space: nowrap;
     border-left: 1px solid rgba(255, 255, 255, 0.1);
-    overflow: hidden;
+}
+.mobi-dv table td > div{
+    word-wrap: break-word;
 }
 .mobi-dv-foot {
     width:100%;
     border-spacing: 0;
     border-collapse: collapse;
+    break-w
 }
 
 .mobi-dv-si{
@@ -121,4 +123,5 @@
 .mobi-dv-head .mobi-dv-si:not([class*='fa']) {
     display: none;
 }
+
 /******************************************************************************/
